<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:id="@+id/bookNameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookNameLabel"
            android:textAppearance="@android:style/TextAppearance.Material.WindowTitle"
            android:text = "@string/book_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookNameEditText"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:background="@android:drawable/edit_text"
            android:layout_marginStart="@dimen/fab_margin"
            android:gravity="end"
            android:hint="@string/book_name_hint"
            app:layout_constraintLeft_toRightOf="@id/bookNameLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:id="@+id/bookIsbnField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookNameField">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookIsbnLabel"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:text = "@string/book_isbn_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookIsbnEditText"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:layout_marginStart="@dimen/fab_margin"
            android:gravity="end"
            android:hint="@string/book_isbn_hint"
            android:background="@android:drawable/edit_text"
            app:layout_constraintLeft_toRightOf="@id/bookIsbnLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:id="@+id/bookAuthorField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookIsbnField">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookAuthorLabel"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:text = "@string/book_author_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookAuthorEditText"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:layout_marginStart="@dimen/fab_margin"
            android:gravity="end"
            android:hint="@string/book_author_hint"
            android:background="@android:drawable/edit_text"
            app:layout_constraintLeft_toRightOf="@id/bookAuthorLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:id="@+id/bookDateField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookAuthorField">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookDateLabel"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:text = "@string/book_date_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookDateEditText"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:hint="@string/book_date_hint"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:layout_marginStart="@dimen/fab_margin"
            android:background="@android:drawable/edit_text"
            android:drawableEnd="@android:drawable/ic_menu_my_calendar"
            app:layout_constraintLeft_toRightOf="@id/bookDateLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>